# pytailwindcss

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: pre-commit.yml  python-package.yml  tests.yml
src/pytailwindcss/: __init__.py  __main__.py  exceptions.py  installation.py  utils.py
tests/: contexts.py  test_core.py  test_installation.py  test_utils.py
